fix gap

--- a/Home/home.css
+++ b/Home/home.css
@@ -164,7 +164,7 @@ header {
     order: 2;     /* Diventa l'ultimo visualmente */
     padding: 0px 0px;
     padding-top: 10px;
-    gap: 50px;
+    gap: 20px;
   }
 
   .hero {
